# robot_arm_pick_and_place

./: CMakeLists.txt  README.md  package.xml
config/: ros2_controllers.yaml
launch/: bringup.launch.py  bringup_rl.launch.py
logs/: events.out.tfevents.1780102847.Inspiron-15-3530.3184.0  events.out.tfevents.1780103251.Inspiron-15-3530.3485.0  events.out.tfevents.1780103723.Inspiron-15-3530.4124.0  events.out.tfevents.1780104997.Inspiron-15-3530.5075.0  events.out.tfevents.1780205664.Inspiron-15-3530.6754.0  events.out.tfevents.1780206752.Inspiron-15-3530.7674.0  events.out.tfevents.1780210638.Inspiron-15-3530.9070.0  events.out.tfevents.1780211155.Inspiron-15-3530.9692.0  events.out.tfevents.1780231179.Inspiron-15-3530.6557.0  events.out.tfevents.1780234174.Inspiron-15-3530.8359.0
meshes/: base_cylinder.stl  clawbase.stl  clawl.stl  clawr.stl  lower_arm.stl  top_arm.stl  top_plate.stl  wrist.stl
pick_place/: README.md
pick_place/agent/: networks.py  replay_buffer.py  sac_agent.py
pick_place/configs/: objects_config.yaml  sac_config.yaml
pick_place/env/: gazebo_env.py  phase_controller.py  reward.py
pick_place/tests/: test_env.py
pick_place/training/: evaluate.py  train.py  train_parallel.py
pick_place/utils/: incremental_curriculum.py  object_detector.py  vision_node.py
rl_agent/: dep_any.py  pick_sim.py
urdf/: arm.urdf  arm_description.csv  pick_and_place.sdf
