<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format='3'>
  <name>arm_bringup</name>
  <version>0.0.0</version>
  <description>ROS 2 Jazzy and Gazebo Harmonic Arm Package</description>
  <maintainer email="phat10102005@gmail.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>controller_manager</depend>
  <depend>position_controllers</depend>
  <depend>joint_state_broadcaster</depend>

  <depend>hardware_interface</depend>
  <depend>gz_ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>